# jax-models

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
attoBabble/: .gitignore  README.md  config.toml  data.py  inference.py  main.py  model.py  pyproject.toml  train.py
chess/: .gitignore  32.json  README.md  cache_tokenize.py  checkpoint.py  config.toml  create_triplets.py  data.py  main.py  main_ebm.py  modal.py  modal_main.py  model.py  notes.md  pgn.py  pyproject.toml  script.py  state.some  test.py  token.py  tokenize_contrastive.py  tokenizer.py  train.py  wandb_his.py
chess/wandb/: latest-run
chess/wandb/run-20250904_062917-zjacwubb/: run-zjacwubb.wandb
chess/wandb/run-20250904_062917-zjacwubb/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
dit/: README.md  config.toml  data.py  main.py  model.py  scheduler.py  train.py
jin/: .gitignore  cache_tokenize.py  checkpoint.py  config.toml  data.py  investigate.py  main.py  model.py  notes.md  pyproject.toml  script.py  train.py  upload.py
recurrent_vit/: config.toml  model.py  notes.md  pyproject.toml
resnet/: pyproject.toml
vit/: .gitignore  config.toml  main.py  model.py  pyproject.toml  train.py
